adding the typedoc

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsc --watch & nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "build": "tsc",
     "format": "prettier --write '**/*.{ts,js,json}'",
-    "lint": "eslint '**/*.{ts,js}' --fix"
+    "lint": "eslint '**/*.{ts,js}' --fix",
+    "docs": "typedoc --out docs src"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,9 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
+    "typedoc": "^0.27.6",
     "typescript": "^5.7.3"
   },
   "dependencies": {
