update package name

--- a/tsConfig.json
+++ b/tsConfig.json
@@ -15,5 +15,6 @@
     "declarationMap": true,
     "emitDeclarationOnly": false // Ensure both JS and declaration files are generated
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
