--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ride-sharing-app-common",
+  "name": "@subash1999/ride-sharing-app-common",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "tsc --watch & nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "build": "tsc",
+    "start": "node dist/index.js",
     "compile": "npm run build",
     "build:types": "tsc --emitDeclarationOnly",
     "watch": "nodemon --watch src --exec 'npm run build'",
