--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -40,17 +40,18 @@ jobs:
           echo "Current version: $current_version"
           
           # Initialize current_version and tag_exists
-          tag_exists=$(git tag -l "$current_version")
-          echo "Tag Exists Version : $tag_exists"
+          git fetch --tags
           
           # If the version already exists, bump it and check again
-          while [ -n "$tag_exists" ]; do
-            echo "Version $current_version already exists. Bumping version."
-            npm version patch --no-git-tag-version
-            current_version=$(npm pkg get version | tr -d '"')
-            tag_exists=$(git tag -l "$current_version")
+          while [ -n "$(git tag -l "$current_version")" ]; do
+              echo "Tag For Version $current_version already exists. Bumping version."
+              npm version patch --no-git-tag-version
+              current_version=$(npm pkg get version | tr -d '"')
           done
           
+          git fetch origin
+          git reset --hard
+            
           echo "Next available version is $current_version."
           echo "version=$current_version" >> $GITHUB_ENV
       - name: Check and Bump Version
