--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "tsc --watch & nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "build": "tsc",
+    "dev": "nodemon --config nodemon.json",
+    "dev-compile-and-create-local-libs": "ts-node --transpile-only ./src/index.ts && npm run create-local-libs",
+    "build": "tsc && npm run copy-package-json",
     "start": "node dist/index.js",
     "compile": "npm run build",
     "build:types": "tsc --emitDeclarationOnly",
     "watch": "nodemon --watch src --exec 'npm run build'",
     "format": "prettier --write '**/*.{ts,js,json}'",
     "lint": "eslint '**/*.{ts,js}' --fix",
-    "docs": "typedoc --out docs src"
+    "docs": "typedoc --out docs src",
+    "copy-package-json": "cp package.json dist/ && node -e \"let pkg=require('./dist/package.json'); pkg.main='index.js'; pkg.types='index.d.ts'; require('fs').writeFileSync('./dist/package.json', JSON.stringify(pkg, null, 2));\"",
+    "create-local-libs": "npm run copy-package-json && mkdir -p ../compiled/ride-sharing-app-common  && find ../compiled/ride-sharing-app-common -mindepth 1 -maxdepth 1 ! -name 'node_modules' -exec rm -rf {} + && mkdir -p ../compiled/ride-sharing-app-common && cp -r dist/* ../compiled/ride-sharing-app-common && cd ../compiled/ride-sharing-app-common && npm install"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
@@ -23,11 +26,13 @@
     "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
+    "concurrently": "^9.1.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
+    "ts-node": "^10.9.2",
     "typedoc": "^0.27.6",
     "typescript": "^5.7.3"
   },
