--- a/.npmrc.template
+++ b/.npmrc.template
@@ -1,2 +1,2 @@
-@subash1999:registry=https://npm.pkg.github.com
+@nepal-ride-sharing-app:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=your_token_from_github
