rename to common

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nepal-ride-sharing-app/ride-sharing-app-common",
+  "name": "@nepal-ride-sharing-app/common",
   "version": "1.0.5",
   "description": "",
   "main": "dist/index.js",
@@ -16,7 +16,7 @@
     "lint": "eslint '**/*.{ts,js}' --fix",
     "docs": "typedoc --out docs src",
     "copy-package-json": "cp package.json dist/ && node -e \"let pkg=require('./dist/package.json'); pkg.main='index.js'; pkg.types='index.d.ts'; require('fs').writeFileSync('./dist/package.json', JSON.stringify(pkg, null, 2));\"",
-    "create-local-libs": "npm run copy-package-json && mkdir -p ../compiled/ride-sharing-app-common  && find ../compiled/ride-sharing-app-common -mindepth 1 -maxdepth 1 ! -name 'node_modules' -exec rm -rf {} + && mkdir -p ../compiled/ride-sharing-app-common && cp -r dist/* ../compiled/ride-sharing-app-common && cd ../compiled/ride-sharing-app-common && npm install"
+    "create-local-libs": "npm run copy-package-json && mkdir -p ../compiled/common  && find ../compiled/common -mindepth 1 -maxdepth 1 ! -name 'node_modules' -exec rm -rf {} + && mkdir -p ../compiled/common && cp -r dist/* ../compiled/common && cd ../compiled/common && npm install"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
@@ -61,6 +61,6 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/subash1999/ride-sharing-app-common.git"
+    "url": "https://github.com/subash1999/common.git"
   }
 }
