--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "baseUrl": "./src",
-    "typeRoots": ["./node_modules/@types", "src/shared-common/types/*"],
+    "typeRoots": ["./node_modules/@types", "src/shared/types/*"],
     "types": [],
     "declaration": true,
     "declarationMap": true,
